--- a/index.html
+++ b/index.html
@@ -6,10 +6,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio-mission2022</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital@1&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,500;0,600;1,100;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <section class="mission">
+        <div class="focus">
+            <div class="line">
+                <h1 id="on">Stay Focused on</h1>
+                <p id="on-2022">Mission 2022</p>
+            </div>
+            <p class="para1">In this 2022 my mission is focused on my career . <br>
+                So I am just want to be a web developer . <br> So I start to learning programming <br> language
+                which is helped me to become a great developer.
+            </p> <br>
+            <a class="anchor" target="-blank" href="https://www.linkedin.com/in/sumaiya-shompa-b816a9227/">Explore
+                Now</a> <br> <br>
+            <p>Scroll down to explore more about us</p>
+        </div>
+        <div class=focus><img class="img1" src="image/sumu.jpg" alt=""></div>
+    </section>
+    <section>
+
+        <div class=heading>
+            <h1><b>My Mission in <span class="span1"> 2022</span></b></h1>
+        </div>
+
+        <div>
+            <div class="box1">
+                <img src="image/illustrator-1.png" alt="">
+                <p><b id="bold">Mission</b></p>
+                <p class="para2">So now my mission is to become a web developer . <br>
+                    Because if I want to a succesfull girl so this mission is very <br> important for me.
+                    So I just hope that i can overcome my <br> mission and will become a succesfull girl one day
+                </p>
+
+            </div>
+            <div class="box2">
+                <img src="image/illustrator-2.png" alt="">
+                <p><b>Vission</b></p>
+                <p>
+                    Though my career goal is to become a web developer <br>
+                    So I am commited to myself that I would always stay in this <br>side
+                    until becoming a succesful developer. <br>And motivated myself to achive this goal.
+                </p>
+            </div>
+            <div class="box3"></div>
+
+        </div>
+    </section>
 </body>
 
 </html>
