--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <h1><b>My Mission in <span class="span1"> 2022</span></b></h1>
         </div>
 
-        <div>
+        <div class="parent">
             <div class="box1">
-                <img src="image/illustrator-1.png" alt="">
+                <img class="img2" src="image/illustrator-1.png" alt="">
                 <p><b id="bold">Mission</b></p>
                 <p class="para2">So now my mission is to become a web developer . <br>
                     Because if I want to a succesfull girl so this mission is very <br> important for me.
@@ -53,15 +53,24 @@
 
             </div>
             <div class="box2">
-                <img src="image/illustrator-2.png" alt="">
-                <p><b>Vission</b></p>
+                <img class="img2" src="image/illustrator-2.png" alt="">
                 <p>
+                    <b id="bold">Vission</b>
+                </p>
+                <p class="para2">
                     Though my career goal is to become a web developer <br>
                     So I am commited to myself that I would always stay in this <br>side
                     until becoming a succesful developer. <br>And motivated myself to achive this goal.
                 </p>
             </div>
-            <div class="box3"></div>
+            <div class="box3">
+                <img class="img2" src="image/illustrator-3.png" alt="">
+                <p><b id="bold">Goal</b></p>
+                <p class="para2">So now my fisrt and last goal is becoming aweb developer . <br>
+                    So i could everything for this goal . Because it is not only my career <br>but also my passion.
+                    So I just hope that my hard work is become <br> success and I go in my dream place when i become
+                    success </p>
+            </div>
 
         </div>
     </section>
