--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 </p>
 
             </div>
+
             <div class="box2">
                 <img class="img2" src="image/illustrator-2.png" alt="">
                 <p>
@@ -63,6 +64,7 @@
                     until becoming a succesful developer. <br>And motivated myself to achive this goal.
                 </p>
             </div>
+
             <div class="box3">
                 <img class="img2" src="image/illustrator-3.png" alt="">
                 <p><b id="bold">Goal</b></p>
@@ -72,6 +74,39 @@
                     success </p>
             </div>
 
+        </div>
+    </section>
+
+    <section class="developer">
+        <div class="limit">
+            <img src="image/cartoon.jpg" alt="">
+
+        </div>
+        <div class="limit2">
+            <h1 class="without">Develop</h1>
+            <h1 class="without">Without Limits</h1>
+            <p>
+                So becoming a successfull girl there is no other alternative <br> way to learning thing because if we
+                learn something
+                <br>it's should be unlimits. SO becoming a web developer <br> we learn and practice without limitation .
+                SO I just focus on it.
+            </p>
+            <a class="anchor" href="https://www.linkedin.com/in/sumaiya-shompa-b816a9227/">Read The Documentation</a>
+        </div>
+    </section>
+
+    <section class="global">
+        <div class="community">
+            <h1 class="without">Know Our</h1>
+            <h1 class="without">Global Community</h1>
+            <p>
+                Global or international communication is the development and sharing of information, <br>
+                through verbal and non-verbal messages, in international settings and contexts. ... <br>
+                Additionally, global communication is a broad area of research within academia.
+            </p>
+        </div>
+        <div class="community">
+            <img class="img3" src="image/project.png" alt="">
         </div>
     </section>
 </body>
