--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="focus">
             <div class="line">
                 <h1 id="on">Stay Focused on</h1>
-                <p id="on-2022">Mission 2022</p>
+                <h1 id="on-2022">Mission 2022</h1>
             </div>
             <p class="para1">In this 2022 my mission is focused on my career . <br>
                 So I am just want to be a web developer . <br> So I start to learning programming <br> language
@@ -49,34 +49,42 @@
 
         <div class="parent">
             <div class="box1">
-                <img class="img2" src="image/illustrator-1.png" alt="">
-                <p><b id="bold">Mission</b></p>
-                <p class="para2">So now my mission is to become a web developer . <br>
-                    Because if I want to a succesfull girl so this mission is very <br> important for me.
-                    So I just hope that i can overcome my <br> mission and will become a succesfull girl one day
-                </p>
+
+                <div class="design">
+                    <img class="img2" src="image/illustrator-1.png" alt="">
+                    <p><b id="bold">Mission</b></p>
+                    <p class="para2">So now my mission is to become a web developer .
+                        Because if I want to a succesfull girl so this mission is very important for me.
+                        So I just hope that i can overcome my mission and will become a succesfull girl one day
+                    </p>
+                </div>
 
             </div>
 
             <div class="box2">
-                <img class="img2" src="image/illustrator-2.png" alt="">
-                <p>
-                    <b id="bold">Vission</b>
-                </p>
-                <p class="para2">
-                    Though my career goal is to become a web developer <br>
-                    So I am commited to myself that I would always stay in this <br>side
-                    until becoming a succesful developer. <br>And motivated myself to achive this goal.
-                </p>
+                <div class="design">
+                    <img class="img2" src="image/illustrator-2.png" alt="">
+                    <p>
+                        <b id="bold">Vission</b>
+                    </p>
+                    <p class="para2">
+                        Though my career goal is to become a web developer
+                        So I am commited to myself that I would always stay in this side
+                        until becoming a succesful developer. And motivated myself to achive this goal.
+                    </p>
+                </div>
             </div>
 
             <div class="box3">
-                <img class="img2" src="image/illustrator-3.png" alt="">
-                <p><b id="bold">Goal</b></p>
-                <p class="para2">So now my fisrt and last goal is becoming aweb developer . <br>
-                    So i could everything for this goal . Because it is not only my career <br>but also my passion.
-                    So I just hope that my hard work is become <br> success and I go in my dream place when i become
-                    success </p>
+                <div class="design">
+                    <img class="img2" src="image/illustrator-3.png" alt="">
+                    <p><b id="bold">Goal</b></p>
+                    <p class="para2">So now my fisrt and last goal is becoming aweb developer .
+                        So i could everything for this goal . Because it is not only my career but also my passion.
+                        So I just hope that my hard work is become success and I go in my dream place when i become
+                        success
+                    </p>
+                </div>
             </div>
 
         </div>
