--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     <section class="mission">
         <div class="focus">
             <div class="line">
-                <h1 id="on">Stay Focused on</h1>
-                <h1 id="on-2022">Mission 2022</h1>
+                <h1> <span id="on">Stay Focused on</span> <br>
+                    <span class="on-2022"> Mission 2022</span>
+                </h1>
+
             </div>
             <p class="para1">In this 2022 my mission is focused on my career . <br>
                 So I am just want to be a web developer . <br> So I start to learning programming <br> language
@@ -96,8 +98,8 @@
 
         </div>
         <div class="limit2">
-            <h1 class="without">Develop</h1>
-            <h1 class="without">Without Limits</h1>
+            <h1 class="without">Develop <br> Without Limits</h1>
+
             <p>
                 So becoming a successfull girl there is no other alternative <br> way to learning thing because if we
                 learn something
@@ -110,8 +112,8 @@
 
     <section class="global">
         <div class="community">
-            <h1 class="without">Know Our</h1>
-            <h1 class="without">Global Community</h1>
+            <h1 class="without">Know Our <br> Global Community</h1>
+
             <p>
                 Global or international communication is the development and sharing of information, <br>
                 through verbal and non-verbal messages, in international settings and contexts. ... <br>
